# ProjWrapCpp

./: COPYING  README.md  meson.build
include/: projwrapper.hpp  projwrappertypes.hpp
src/: projwrapper.cpp  projwrappertypes.cpp
